push to my remote ping work

--- a/testRabbitMQ.ini
+++ b/testRabbitMQ.ini
@@ -1,11 +1,10 @@
-[testServer]
-BROKER_HOST = 127.0.0.1
-BROKER_PORT = 5672
-USER = test
-PASSWORD = test
-VHOST = testHost
-EXCHANGE = testExchange
-QUEUE = testQueue
-;EXCHANGE_TYPE = ????
-AUTO_DELETE = true
-
+1 [testServer]
+ 2 BROKER_HOST = 10.147.19.109
+ 3 BROKER_PORT = 5672
+ 4 USER = test
+ 5 PASSWORD = test
+ 6 VHOST = testHost
+ 7 QUEUE = testQueue
+ 8 ;EXCHANGE_TYPE = ????
+ 9 AUTO_DELETE = true
+10
